# relay

./: .gitignore  bun.lockb  index.html  openapi.json  package-lock.json  package.json  readme.md  relay.config.json  repomix.config.json  telemetry-id  tsconfig.json  vite.config.ts
.idx/: dev.nix
.react-router/types/: +routes.ts
apps/api/: Cargo.toml  openapi.json  package.json  tsconfig.json
apps/api/src/: index.ts  lib.rs  main.rs  models.ts  store.rs  store.ts
apps/api/src/routes/: events.rs  events.ts  prompts.rs  prompts.ts  transactions.rs  transactions.ts
apps/web/: package.json  react-router.config.js  tsconfig.json  vite.config.js  vite.config.ts
apps/web/src/: root.tsx  routes.ts
crates/: Cargo.toml
crates/relaycode-api/: Cargo.toml
crates/relaycode-api/src/: lib.rs  main.rs
crates/relaycode-api/src/routes/: dev.rs  events.rs  mod.rs  prompts.rs  transactions.rs
crates/relaycode-core/: Cargo.toml
crates/relaycode-core/src/: lib.rs
crates/relaycode-schema/: Cargo.toml
crates/relaycode-schema/src/: lib.rs
docs/: commit.md  flow.todo.md  pathfish.md  relay.md  repomix.md
docs/diff/: 1.md  plan1.md
docs/example/src/: App.tsx
src/: App.tsx  app.component.tsx  main.tsx  root.tsx  routes.ts
src/pages/: Dashboard.tsx  dashboard.page.tsx
src/routes/: dashboard.tsx  history.tsx  prompts.tsx
src/services/: api.service.ts  api.ts  mock-data.json
src/store/: root.store.ts  useAppStore.ts  useTransactionStore.ts
src/styles/: main.style.css
src/types/: app.types.ts  index.ts
src/utils/: diff.util.ts  group.util.ts
(+53 files in other folders)
